[tool.poetry]
name = "philia-pyinvc"
version = "0.1.0"
description = ""
authors = ["Philia <mailinglists6@gmail.com>"]
readme = "README.md"
packages = [{ include = "pyinvc" }]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
